<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".InGameMenuActivity">

    <TextView
        android:id="@+id/textView3"
        style="@style/text_view_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_menu"
        android:textAlignment="center"
        android:textSize="52sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonSave"
        style="@style/game_option_buttons_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:soundEffectsEnabled="false"
        android:text="@string/text_save_game" />

    <Button
        android:id="@+id/buttonExit"
        style="@style/game_option_buttons_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:soundEffectsEnabled="false"
        android:text="@string/text_back" />

    <Button
        android:id="@+id/buttonExitToMainMenu"
        style="@style/game_option_buttons_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:soundEffectsEnabled="false"
        android:text="@string/text_exit_to_main_menu" />
</LinearLayout>