<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOptionsFragment">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/game_option_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:gravity="center"
            android:text="@string/text_player_2_turn"
            android:textColor="#0256A3"
            android:textSize="32sp" />

        <LinearLayout
            android:id="@+id/score_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_x_score"
                android:layout_width="75dp"
                android:layout_height="125dp"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/oxanium_bold"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="72sp" />

            <TextView
                android:id="@+id/player_y_score"
                android:layout_width="75dp"
                android:layout_height="125dp"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/oxanium_bold"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="72sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/animation_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/die_1_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:contentDescription="@string/text_die_one"
                app:srcCompat="@drawable/one" />

            <ImageView
                android:id="@+id/die_2_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:contentDescription="@string/text_die_two"
                app:srcCompat="@drawable/one" />
        </LinearLayout>

        <Button
            android:id="@+id/removeTileButton"
            style="@style/game_option_buttons_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:soundEffectsEnabled="false"
            android:text="@string/remove_tile"
            android:textSize="32sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/restoreTileButton"
            style="@style/game_option_buttons_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:soundEffectsEnabled="false"
            android:text="@string/text_restore_tile"
            android:textSize="32sp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>


</FrameLayout>