<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Settings">

    <TextView
        android:id="@+id/settings_title"
        style="@style/text_view_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_settings"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/music_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:fontFamily="@font/bungee"
            android:text="@string/text_music"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/music_toggle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:background="#0256A3"
            android:soundEffectsEnabled="false"
            android:fontFamily="@font/bungee"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fx_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:fontFamily="@font/bungee"
            android:text="@string/text_sound_fx"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/fx_toggle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:soundEffectsEnabled="false"
            android:background="#0256A3"
            android:fontFamily="@font/bungee"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dark_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:fontFamily="@font/bungee"
            android:text="@string/text_dark_mode"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/dark_toggle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:soundEffectsEnabled="false"
            android:background="#0256A3"
            android:fontFamily="@font/bungee"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/backButton"
        style="@style/game_option_buttons_style"
        android:layout_width="wrap_content"
        android:soundEffectsEnabled="false"
        android:layout_height="wrap_content"
        android:text="@string/text_back" />

</LinearLayout>